  2/ Added binary wheels for Linux on arm64.
  3/ Exiv2 struct member names with a trailing underscore have more Pythonic
     aliases without the underscore.
  4/ Add data() method to exiv2.PreviewImage, deprecate pData() method.
  5/ Deprecated many BasicIo methods (read, write, seek, etc.) that should not
     be needed in Python scripts. Let me know if this is a problem.

Changes in v0.17.3:
  1/ Binary wheels incorporate libexiv2 v0.28.5.

Changes in v0.17.2:
  1/ Binary wheels incorporate libexiv2 v0.28.4.
  2/ Fix TimeValue test when run with local negative UTC offset.

Changes in v0.17.1:
  1/ Fix crash when using localised exceptions on Windows.

Changes in v0.17.0:
  1/ API change: derived classes of BasicIo are omitted from Python.
  2/ Binary wheels incorporate libexiv2 v0.28.3.
  3/ enableBMFF() function is deprecated.
  4/ Documentation is available on https://python-exiv2.readthedocs.io/
  5/ Improved handling of Windows code page character sets.

Changes in v0.16.3:
  1/ Binary wheels incorporate libexiv2 v0.28.2.

Changes in v0.16.2:
  1/ Removed AnyError alias of Exiv2Error exception.
  2/ Metadatum.print() method is no longer renamed to _print.
  3/ Improved handling of enums:
     1/ Enum results are returned as Python enum instead of int.
     2/ Passing ints as enum parameters is deprecated.
  4/ Added dict-like behaviour to "data" structs.
  5/ Log handlers can be set/cleared from Python.
  6/ Made docs available on readthedocs.org
  7/ SWIG v4.1.0 or later required to run SWIG.
  8/ Binary wheels incorporate libexiv2 v0.27.7.

Changes in v0.16.1:
  1/ Binary wheels incorporate libexiv2 v0.27.7.

Changes in v0.16.0:
  1/ Binary wheels incorporate libexiv2 v0.28.1.
  2/ Include native language support in Windows binary wheel builds.
  3/ API change: DateValue.getDate() returns Python dict.
  4/ API change: TimeValue.getTime() returns Python dict.
  5/ Deprecated: exiv2.Date and exiv2.Time objects.
  6/ Added buffer interface to PreviewImage