@@ -4388,6 +4388,9 @@ static bool get_ptr_size(Exiv2::BasicIo* self, bool is_writeable,
 
 static int getbuffer_Exiv2_BasicIo(
         PyObject* exporter, Py_buffer* view, int flags) {
+    // Deprecated since 2025-07-09
+    PyErr_WarnEx(PyExc_DeprecationWarning, "Please use 'data()' to get a"
+                 " memoryview of Exiv2::BasicIo", 1);
     Exiv2::BasicIo* self = 0;
     Exiv2::byte* ptr = 0;
     Py_ssize_t size = 0;
