@@ -4599,6 +4599,9 @@ static bool get_ptr_size(Exiv2::DataBuf* self, bool is_writeable,
 
 static int getbuffer_Exiv2_DataBuf(
         PyObject* exporter, Py_buffer* view, int flags) {
+    // Deprecated since 2025-07-09
+    PyErr_WarnEx(PyExc_DeprecationWarning, "Please use 'data()' to get a"
+                 " memoryview of Exiv2::DataBuf", 1);
     Exiv2::DataBuf* self = 0;
     Exiv2::byte* ptr = 0;
     Py_ssize_t size = 0;
